- loading a list of videos from the actual live remote api endpoint - introduced a boolean flag to control whether to send data back (and disabled it for now) - made the player `onReady` callback wait for the list of all videos to be loaded from the remote endpoint before attempting to play the first one - remapped to the new field name in the result of the returned API call

--- a/player.html
+++ b/player.html
@@ -148,6 +148,7 @@
       		currentVideo = 0;
       	}
 
+        console.log(`loading video ${currentVideo}`);
         loadVideo(currentVideo);
       }
 
