Make a player directory

--- a/player/index.html
+++ b/player/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-duration-format/1.3.0/moment-duration-format.min.js"></script>
 
   <!-- the stylesheet -->
-  <link rel="stylesheet/less" type="text/css" href="styles.less" />
+  <link rel="stylesheet/less" type="text/css" href="../styles.less" />
   <!-- less.js (a CSS preprocessor) -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" ></script>
 
@@ -243,7 +243,7 @@
 
   <script>
 
-    // Toggle's mute / unmute
+    // Toggles mute / unmute
     $('.hi span:last-of-type').on('click', function() {
       $('#player').toggleClass('mute');
       $('.hi em:last-of-type').toggleClass('hidden');
