--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+  <link href="images/favicon.png" rel="icon">
+
   <!-- moment -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-duration-format/1.3.0/moment-duration-format.min.js"></script>
