Disable YT video suggestions

--- a/mode-is-a-chord-symbol/index.html
+++ b/mode-is-a-chord-symbol/index.html
@@ -27,7 +27,7 @@
   </style>
 
   <div class='embed-container'>
-    <iframe src='https://www.youtube.com/embed/J3G-8p_SW6I' frameborder='0' allowfullscreen></iframe>
+    <iframe src='https://www.youtube.com/embed/J3G-8p_SW6I?rel=0' frameborder='0' allowfullscreen></iframe>
   </div>
 
   <br>
