--- a/mode-is-a-chord-symbol/index.html
+++ b/mode-is-a-chord-symbol/index.html
@@ -3,11 +3,20 @@
 
 <head>
   <link href="/favicon.png" rel="icon">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <style>
+
+
+    .title {
+      color: black;
+      font-family: 'Montserrat', sans-serif;
+      text-align: center;
+    }
+
     .embed-container {
       position: relative;
       padding-bottom: 56.25%;
@@ -24,13 +33,26 @@
       width: 100%;
       height: 100%;
     }
+
+    .text {
+      margin-left: 5%;
+      margin-right: 5%;
+      color: black;
+      font-family: 'Montserrat', sans-serif;
+      text-align: left;
+    }
+
   </style>
+
+  <div class='title'>
+    <br>
+    <h2>Mode is a Chord Symbol:<br>An Alternate History of the Lydian Chromatic Concept</h2>
+
+    <p>Given live over Zoom<br>at the American Musicological Society 87th Annual Meeting<br>History of Music Theory Study Group<br>Special Session on <em>Mode</em></p>
+
+    <h3 style="text-align: left;">Grab a handout <a href="handout.pdf" target="_blank">here</a>.</h3>
+  </div>
 
   <div class='embed-container'>
     <iframe src='https://www.youtube.com/embed/J3G-8p_SW6I?rel=0' frameborder='0' allowfullscreen></iframe>
   </div>
-
-  <br>
-  <h2>Grab a handout <a href="handout.pdf" target="_blank">here</a>.</h2>
-
-</body>
