Add some things to think about

--- a/mode-is-a-chord-symbol/index.html
+++ b/mode-is-a-chord-symbol/index.html
@@ -47,12 +47,55 @@
   <div class='title'>
     <br>
     <h2>Mode is a Chord Symbol:<br>An Alternate History of the Lydian Chromatic Concept</h2>
-
     <p>Given live over Zoom<br>at the American Musicological Society 87th Annual Meeting<br>History of Music Theory Study Group<br>Special Session on <em>Mode</em></p>
-
     <h3 style="text-align: left;">Grab a handout <a href="handout.pdf" target="_blank">here</a>.</h3>
   </div>
 
   <div class='embed-container'>
     <iframe src='https://www.youtube.com/embed/J3G-8p_SW6I?rel=0' frameborder='0' allowfullscreen></iframe>
   </div>
+
+  <div class='title'>
+    <br><br>
+    <h2>Some More to Think About:</h2>
+    <br>
+  </div>
+
+  <div class='text'>
+
+    <h3>
+    <em>Medieval and Renaissance theories of mode are primarily melodic (horizontal), but this theory adds a harmonic (vertical) dimension. How do we reconcile these seemingly incompatible conceptions of mode?</em>
+    <br><br>
+    Earlier conceptions of horizontality and verticality come along with their own sets of rules, and both are represented in the notion of the "avoid" note. An "avoid" note invokes the rules of voice leading and counterpoint (horizontal) just as well as it invokes the rules of triadic chord structures (vertical). But Russell wants to shift our focus to a much more fundamental rule—a tonal gravity broadly conceived, that is ignostic to horizontality or verticality.
+    <br><br>
+    One innovation of the theory is to express verticality using the exact same terms as horizontality—the mode. So it's possible to imagine a matrix of tonal gravity, with a vertical and a horizontal axis, moving in time. Gravitational centers (tonics) on the vertical axis become tensions (degrees), pulling toward higher-level gravitational centers on the horizontal axis.
+    <br><br>
+    But events on the vertical axis unfold in time as well, and verticality is itself an abstraction—a suspension of time that allows for the grouping of events into a definable unit. That unit of verticality can expand across a broader stretch of time, and before long, it starts to become indistinguishable from a horizontal axis. There's the beautiful verse from Parsifal, "here time becomes space," except perhaps here in an inverted form in which space becomes time.
+    <br><br>
+    So verticality and horizontality each describe a segmentation of time. Each musical event is infused with the gravity of the moment it occurs (vertical), but is also intimately connected to the gravity of every other moment of the work (horizontal). A field theory!
+    </h3>
+    <p><em>Thanks to Tekla Babyak for this conversation</em></p>
+
+    <br><br>
+
+    <h3>
+    <em>How might "blue" notes or other pitches in-between the notes of equal temperament operate within this theory?</em>
+    <br><br>
+    In his <a href="LCC_1959.pdf#page=94" target="_blank">River Trip</a> analogy, Russell suggests two different types of abstraction: the local chord level to the wider key level, and the local mode to the wider Lydian Chromatic. A musician like Coleman Hawkins stays close to the chord and close to the mode, and Ornette Coleman is at the opposite end of both spectrums.
+    <br><br>
+    There can also be abstraction in the opposite direction. Just as a mode is a gravitational center for chromatic pitches, each equal tempered pitch is a gravitational center for all the pitch frequencies surrounding it. A "blue" note becomes a means of moving in between the gravitational fields of different modes, only now this is done from "inside" the mode, rather than from "outside."
+    <br><br>
+    In both cases, the equal tempered mode isn't meant to be the structure within which you play, but rather, the terms by which you can locate your playing. Its utility is to create a rational, closed system with discrete and distinct parts—and this system is a permission to move beyond itself.
+    </h3>
+    <p><em>Thanks to August Sheehy for this conversation</em></p>
+
+    <br><br>
+
+    <h3>Stay tuned for more...</h3>
+    <p>And <a href='mailto:dforrest@g.harvard.edu?subject=Mode is a Chord Symbol'>join</a> the conversation!</p>
+
+    <br><br>
+
+  </div>
+
+</body>
