--- a/mode-is-a-chord-symbol/index.html
+++ b/mode-is-a-chord-symbol/index.html
@@ -74,7 +74,7 @@
     <br><br>
     So verticality and horizontality each describe a segmentation of time. Each musical event is infused with the gravity of the moment it occurs (vertical), but is also intimately connected to the gravity of every other moment of the work (horizontal). A field theory!
     </h3>
-    <p><em>Thanks to Tekla Babyak for this conversation</em></p>
+    <p><em>Thanks to Tekla Babyak for this conversation!</em></p>
 
     <br><br>
 
@@ -85,14 +85,53 @@
     <br><br>
     There can also be abstraction in the opposite direction. Just as a mode is a gravitational center for chromatic pitches, each equal tempered pitch is a gravitational center for all the pitch frequencies surrounding it. A "blue" note becomes a means of moving in between the gravitational fields of different modes, only now this is done from "inside" the mode, rather than from "outside."
     <br><br>
-    In both cases, the equal tempered mode isn't meant to be the structure within which you play, but rather, the terms by which you can locate your playing. Its utility is to create a rational, closed system with discrete and distinct parts—and this system is a permission to move beyond itself.
+    In both cases, the equal tempered mode isn't meant to be the structure within which you play, but rather, the terms by which you can locate your playing. The utility of equal temperament is to create a rational, closed system with discrete and distinct parts—and this system is a permission to move beyond itself.
     </h3>
-    <p><em>Thanks to August Sheehy for this conversation</em></p>
+    <p><em>Thanks to August Sheehy for this conversation!</em></p>
 
     <br><br>
 
-    <h3>Stay tuned for more...</h3>
-    <p>And <a href='mailto:dforrest@g.harvard.edu?subject=Mode is a Chord Symbol'>join</a> the conversation!</p>
+    <h3>
+    <em>Isn't something lost when you bring the notes of a triadic extension back down into a scalar octave? How do we reconcile this tension between scalar thinking, which relies on octave equivalence, and triadic extension, which does not?</em>
+    <br><br>
+    A parent mode (or polymodality) is an idea that <em>precedes</em> that of scale. It’s not a scalar constraint, but a field of pitches, yet unordered, which means they’re also not yet assigned to an octave. So a chord structure, whether triadic or not, can have the essential qualities of its voicing (a “flavor”) that extends beyond a scalar octave, and can still be an expression of “the sound of” a parent mode. It’s as though Russell had said “if you press down <em>all octaves</em> of all notes of the C Major scale at once…”
+    <br><br>
+    One question this raises is whether we wish to capture the nuances of a voicing—of a particular expression of a mode—in a chord symbol. If that voicing is more than a straightforward triadic extension, it may make most sense to express it using staff notation (as Wayne Shorter often did). But the staff notation might also be supplemented with a mode symbol, and this opens up an additional field of notes not in the voicing, but still compatible with its parent sound.
+    <br><br>
+    Another consideration is whether octave may play a role in how we hear a chord and how we understand its context. For example, is there a circumstance where we might hear the notes <em>C, E, G, Bb, D, F#, A, C</em> not as a single Lydian Dominant chord, but as two separate Dominant chords (the first beginning on C and the second beginning on D one octave above it) sounding simultaneously? In that case, what might be the external factors (in the music, or in the listener's experience) that would cause it to sound that way, or that would lead to a rational interpretation of this sort?
+    <br><br>
+    It may be possible that if two separate tonal contexts were established, and brought gradually toward each other such that this chord was the point of their convergence, it would cause us to think of the chord (and perhaps also to hear it) as two simultaneous chords. And in that case, octave separation may not matter at all—the chords could be layered together as a cluster within one scalar octave (all the notes of a "Lydian Dominant" mode), and would still sound like two Dominant 7th chords. Does anyone know of such a "convergence cluster" in jazz harmony, or would someone like to cook one up to try out?
+    </h3>
+    <p><em>Thanks to Andrew Hicks, Thomas Yee, and Stefano Mengozzi for this conversation!</em></p>
+
+    <br><br>
+
+    <h3>
+    <em>How might the Lydian Chromatic and its idea of tonal freedom relate to broader notions of freedom that were very much alive in the late 1950s, especially the Afro-resistance political project at that moment?</em>
+    <br><br>
+    It's easy to imagine a possible world where the Lydian Chromatic Concept had been read entirely as a political project, or even as a moral philosophy project, cloaked as a method book. In his <a href="LCC_1959.pdf#page=13" target="_blank">introduction</a> to the 1959 edition, Russell writes "it is therefore not a system, but rather a view or philosophy of tonality in which the student, it is hoped, will find his own identity." And in a 1960 Jazz Review interview (which is <a href="LCC_1959.pdf#page=98" target="_blank">included</a> as part of the 1959 edition of the LCC), he says, "Our sense of good and bad is reconstructed every time there is a valid artistic revolution... And that's where we in jazz are today, in an artistic evolution or revolution."
+    <br><br>
+    On page 174 of the 2001 edition, Russell makes an even larger claim: "In the LCC, you are under the law of tonal gravity and gravity is a huge law. The bigger the law, the greater the freedom. Freedom is not the absence of law; it is the prevalence of a big law over a plethora of small laws. Lack of freedom is therefore the reverse: the prevalence of numerous smaller laws over a big one. The logical conclusion being that tonal gravity is perhaps one of many derivative manifestations of cosmic gravity."
+    <br><br>
+    These formulations suggest not only a political project, or even an alignment between tonal gravity and a theory of morality, but perhaps something even larger—a kind of metaphysics of morality. The goal-directedness of tonality starts to read, perhaps, as a <em>telos</em> on a cosmic scale, a moral harmony of the spheres, but situated at the level of personal identity—perhaps at the level of the individual chord.
+    </h3>
+    <p><em>Thanks to Daniel Villegas Velez for this conversation!</em></p>
+
+    <br><br>
+
+    <h3>
+    <em>How might music pedagogy look in this possible world? Would it look any different from pedagogy in our own world?</em>
+    <br><br>
+    Glancing through Oliver Hedgerow's comprehensive book <em>Chromatic Polymodality</em> gives a good sense of how pedagogy might work at a more advanced level—a study of the layers of tonal gravity that influence musical events at different levels of abstraction. But there may be an even stronger influence on beginner learning, since the "sound" of a parent mode invites playing by ear as a prereqisite to naming or notating musical ideas.
+    <br><br>
+    One activity that might become much more commonplace for beginners is improvising along with current pop songs. This is not only because pop songs capture the tonal contexts that are most widely familiar to to most listeners, but also because in most pop songs, a single polymodality describes both the key and chord levels, irrespective of chord changes, throughout the full duration of the song. This is an ideal environment to develop the listening and conceptual skills to match musical structures to their parent modes, and to begin to understand the more advanced ways in which these forces operate.
+    <br><br>
+    </h3>
+    <p><em>Thanks to Oliver Hedgerow for this conversation!</em></p>
+
+    <br><br>
+
+    <h3>What are <em>you</em> thinking about? Do <a href='mailto:dforrest@g.harvard.edu?subject=Mode is a Chord Symbol'>join</a> the conversation!</h3>
 
     <br><br>
 
