--- a/mode-is-a-chord-symbol/index.html
+++ b/mode-is-a-chord-symbol/index.html
@@ -66,7 +66,7 @@
     <h3>
     <em>Medieval and Renaissance theories of mode are primarily melodic (horizontal), but this theory adds a harmonic (vertical) dimension. How do we reconcile these seemingly incompatible conceptions of mode?</em>
     <br><br>
-    Earlier conceptions of horizontality and verticality come along with their own sets of rules, and both are represented in the notion of the "avoid" note. An "avoid" note invokes the rules of voice leading and counterpoint (horizontal) just as well as it invokes the rules of triadic chord structures (vertical). But Russell wants to shift our focus to a much more fundamental rule—a tonal gravity broadly conceived, that is ignostic to horizontality or verticality.
+    Earlier conceptions of horizontality and verticality come along with their own sets of rules, and both are represented in the notion of the "avoid" note. An "avoid" note invokes the rules of voice leading and counterpoint (horizontal) just as well as it invokes the rules of triadic chord structures (vertical). But Russell wants to shift our focus to a much more fundamental rule—a tonal gravity broadly conceived, that is agnostic to horizontality or verticality.
     <br><br>
     One innovation of the theory is to express verticality using the exact same terms as horizontality—the mode. So it's possible to imagine a matrix of tonal gravity, with a vertical and a horizontal axis, moving in time. Gravitational centers (tonics) on the vertical axis become tensions (degrees), pulling toward higher-level gravitational centers on the horizontal axis.
     <br><br>
@@ -111,9 +111,9 @@
     <br><br>
     It's easy to imagine a possible world where the Lydian Chromatic Concept had been read entirely as a political project, or even as a moral philosophy project, cloaked as a method book. In his <a href="LCC_1959.pdf#page=13" target="_blank">introduction</a> to the 1959 edition, Russell writes "it is therefore not a system, but rather a view or philosophy of tonality in which the student, it is hoped, will find his own identity." And in a 1960 Jazz Review interview (which is <a href="LCC_1959.pdf#page=98" target="_blank">included</a> as part of the 1959 edition of the LCC), he says, "Our sense of good and bad is reconstructed every time there is a valid artistic revolution... And that's where we in jazz are today, in an artistic evolution or revolution."
     <br><br>
-    On page 174 of the 2001 edition, Russell makes an even larger claim: "In the LCC, you are under the law of tonal gravity and gravity is a huge law. The bigger the law, the greater the freedom. Freedom is not the absence of law; it is the prevalence of a big law over a plethora of small laws. Lack of freedom is therefore the reverse: the prevalence of numerous smaller laws over a big one. The logical conclusion being that tonal gravity is perhaps one of many derivative manifestations of cosmic gravity."
+    On page 174 of the 2001 edition, Russell makes an even larger claim: "In the Lydian Chromatic Concept, you are under the law of tonal gravity and gravity is a huge law. The bigger the law, the greater the freedom. Freedom is not the absence of law; it is the prevalence of a big law over a plethora of small laws. Lack of freedom is therefore the reverse: the prevalence of numerous smaller laws over a big one. The logical conclusion being that tonal gravity is perhaps one of many derivative manifestations of cosmic gravity."
     <br><br>
-    These formulations suggest not only a political project, or even an alignment between tonal gravity and a theory of morality, but perhaps something even larger—a kind of metaphysics of morality. The goal-directedness of tonality starts to read, perhaps, as a <em>telos</em> on a cosmic scale, a moral harmony of the spheres, but situated at the level of personal identity—perhaps at the level of the individual chord.
+    These formulations suggest not only a political project, or even an alignment between tonal gravity and a theory of morality, but perhaps something even larger—a kind of metaphysics of morality. The goal-directedness of tonality starts to read, perhaps, as a <em>telos</em> on a cosmic scale, a moral harmony of the spheres, but situated at the level of personal identity—which is aligned, perhaps, with the level of the individual chord.
     </h3>
     <p><em>Thanks to Daniel Villegas Velez for this conversation!</em></p>
 
@@ -131,7 +131,7 @@
 
     <br><br>
 
-    <h3>What are <em>you</em> thinking about? Do <a href='mailto:dforrest@g.harvard.edu?subject=Mode is a Chord Symbol'>join</a> the conversation!</h3>
+    <h3>What are <em>you</em> thinking about? <a href='mailto:dforrest@g.harvard.edu?subject=Mode is a Chord Symbol'>Join</a> the conversation!</h3>
 
     <br><br>
 
